docroot/themes/custom/twentyeighteen/sass/components/views/_schedule.scss
.menu--_018-schedule {
  .menu {
    list-style: none;
    padding-left: 0;
    margin-bottom: 0.325rem;
  }

  li {
    display: inline;
  }

  a {
    color: $white;
    padding: 0.5em 0.75em;
    background-color: $light-teal;
    text-transform: uppercase;
    text-decoration: none;
    border-radius: 0.25em 0.25em 0 0;
    font-size: 0.875em;
    letter-spacing: 0.02em;

    &.is-active {
      background-color: $teal;
      font-weight: 600;
      letter-spacing: 0.04em;
    }
  }
}

.view-id-sessions_schedule {
  margin-bottom: 3rem;

  .view-header h2 {
    margin-top: 0;
    padding: 0.25em 0.5em;
    text-transform: uppercase;
    background-color: $teal;
    color: rgba($white, 0.9);
    font-size: 1em;
    letter-spacing: 0.03em;
    font-weight: 700;
  }

  .view-content h2,
  .view-grouping-content > h3 {
    margin: 1rem 0 0;
  }

  .view-content time {
    display: block;
    margin: 0;
    border-bottom: 4px solid $pale-blue;
    padding-left: 0.5rem;
    color: rgba($sienna, 0.75);
    font-size: 0.875rem;
    font-style: normal;
    font-weight: 700;
  }

  .views-row {
    padding: 0.5em;
    border-bottom: 1px solid $gold;

    &:nth-child(odd) {
      //background: rgba($gold, 0.1);
      background: rgba(255, 255, 230, 0.8);
    }
  }

  .views-field-title {
    font-size: 1.25rem;
    margin: 0.125rem 0;
  }

  .views-field-uid {
    font-style: italic;
  }

  .views-field-field-session-track,
  .views-field-field-experience-level {
    display: inline-block;
    position: relative;
    font-size: 0.875rem;
  }

  .views-field-field-session-track a {
    color: $sienna;
  }

  .views-field-field-experience-level {
    margin-left: 1rem;
    font-style: italic;

    &::before {
      content: '|';
      position: absolute;
      top: 0;
      left: -10px;
      font-style: normal;
    }
  }

  .views-field-field-session-room {
    font-style: italic;
    line-height: 1.5rem;
    font-size: 0.875rem;
  }
}

.program-my-schedule .view-content .view-grouping:first-of-type .view-header h2:first-of-type {
  margin: 0;
}

.block-views-exposed-filter-blocksessions-schedule-page-2 {
  .form-actions {
    display: inline-block;
    padding: 0.5em;

    input[type="submit"] {
      margin-top: 1.5rem;
      padding: 0.7rem 1rem;
    }
  }
}

